Indication for modified files on their tabs

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -177,6 +177,10 @@ body {
             text-shadow: none;
         }
 
+        &.modified {
+            color: orange;
+        }
+
         .close-tab {
             float: right;
             display: inline-block;
@@ -302,4 +306,19 @@ body {
     //     background: orange;
     //     opacity: 0.5;
     // }
+}
+
+.filetree-toolbar {
+    box-shadow: 0 1px 5px 0 #000;
+}
+
+.btn {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.pull-right {
+    float: right;
 }
