--- a/src/style/main.less
+++ b/src/style/main.less
@@ -167,9 +167,9 @@ body {
         text-shadow: 0px -1px 0px #000;
 
         &:hover {
-            background: lighten(#2F3129, 5%);
+            background: lighten(#2F3129, 2%);
             color: #fff;
-            z-index: 4;
+            // z-index: 4;
         }
 
         &.active {
@@ -203,7 +203,8 @@ body {
             position: relative;
             z-index: 2;
             opacity: 0.5;
-            transition: all 0.2s ease 0.1s;
+            color: rgba(255, 255, 255, 0.4);
+            transition: all 0.2s;
 
             &:hover {
                 background: rgba(0, 0, 0, 0.3);
