The mode-select component now works on click instead of on contextmenu

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -18,6 +18,15 @@ body {
     -webkit-app-region: drag;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+    
+    &:hover {
+        text-decoration: underline;    
+    }
+}
+
 @font-face {
 	font-family: 'icomoon';
 	src:url('./fonts/icomoon.woff') format('woff');
