--- a/src/style/FileTree.less
+++ b/src/style/FileTree.less
@@ -73,7 +73,7 @@
         }
 
         &.selected > div {
-            background: rgba(255, 255, 255, 0.1);
+            background: @color-ui-accent;//rgba(255, 255, 255, 0.1);
             box-shadow: 0 0 1px 0 #000;
             outline: none;
             color: #FFF;
