--- a/src/style/FileTree.less
+++ b/src/style/FileTree.less
@@ -19,9 +19,8 @@
 
         &.icon-folder-open,
         &.icon-folder {
-            // color: rgba(169, 142, 76, 0.7);
-            color: mix(@color-ui-accent, @color-ui-dark);
-            -webkit-text-stroke: 0.25px #000;
+            color: mix(@color-ui-accent, @color-ui);
+            -webkit-text-stroke: 0.2px #000;
         }
 
         &.icon-file-text2 {
@@ -37,39 +36,41 @@
         min-width  : 100%;
 
          > div {
-             min-width: 100%;
-             display: inline-block;
+             min-width    : 100%;
+             display      : inline-block;
              padding-right: 4px;
-             position: relative;
-             z-index: 2;
+             position     : relative;
+             z-index      : 2;
              border-radius: 2px;
-             line-height: 20px;
+             line-height  : 20px;
          }
 
         > div:before {
-            content: "";
-            width: 0;
-            height: 0;
+            content     : "";
+            width       : 0;
+            height      : 0;
             border-width: 5px;
             border-color: transparent;
             border-style: inset inset inset solid;
-            position: relative;
-            display: inline-block;
-            margin: 0px 3px 0px 9px;
+            position    : relative;
+            display     : inline-block;
+            margin      : 0px 3px 0px 9px;
         }
+
         &.dir > div:before {
             border-color: transparent transparent transparent @color;
         }
+
         &.expanded > div:before {
             border-color: @color transparent transparent transparent;
             border-style: solid inset inset inset;
-            margin: 6px 6px -3px 6px;
+            margin      : 6px 6px -3px 6px;
         }
 
         > div:hover {
-            background: rgba(0, 0, 0, 0.2);
-            text-shadow : 0 1px 0 fade(contrast(@color), 10%);
-            box-shadow: 0 0 1px 0 #000;
+            background  : fade(contrast(@color-ui), 5%);
+            text-shadow : 0 1px 0 fade(contrast(@color, #000, #fff, 10%), 30%);
+            box-shadow  : 0 0 1px 0 fade(contrast(@color-ui), 10%) inset;
         }
 
         > div:focus {
@@ -77,11 +78,12 @@
         }
 
         &.selected > div {
-            background: mix(@color-ui-accent, @color-ui);//rgba(255, 255, 255, 0.1);
-            box-shadow: 0 0 1px 0 #000 inset;
-            outline: none;
-            color: #FFF;
-            text-shadow : 0 1px 1px #000;
+            @color: mix(@color-ui-accent, @color-ui);
+            background  : @color;
+            box-shadow  : 0 0 1px 0 darken(@color, 20%) inset;
+            outline     : none;
+            color       : contrast(@color);
+            text-shadow : 0 1px 1px fade(contrast(contrast(@color)), 50%);
 
             // .icon-folder-open,
             // .icon-folder {
@@ -98,4 +100,8 @@
         //     box-shadow: 0 0 1px 0 rgba(255, 127, 0, 1) inset;
         // }
     }
+}
+
+.dark .file-tree li.selected > div {
+    box-shadow  : 0 0 1px 0 @color-ui-darkest;
 }
