--- a/src/style/tabs.less
+++ b/src/style/tabs.less
@@ -14,7 +14,7 @@
         top       : 100%;
         left      : 0;
         width     : 100%;
-        margin-top: -3px;
+        margin-top: -3px; 
         z-index   : 3;
         border    : 1px solid @color-ui-darkest;
     }
@@ -37,6 +37,7 @@
         
         &:last-child {
             border-top-right-radius: 3px;
+            margin-right: 1px !important;
         }
         &:first-child {
             border-top-left-radius: 3px;
@@ -109,45 +110,55 @@
 /* DARK THEME --------------------------------------------------------------- */
 .dark .main-tabs {
     // background    : linear-gradient(@color-ui-dark, @color-ui);
-    background: @color-ui;
+    // background: @color-ui;
     
     &::after {
-        background: @color-ui;
-        box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+        // background: @color-ui;
+        // box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
     }
     .tab {
-        box-shadow: 0px -1px 0px 1px rgba(0, 0, 0, 0.2),
-                    0 1px 2px -2px rgba(255, 255, 255, 0.5) inset,
-                    0 -17px 16px -7px rgba(0, 0, 0, 0.2) inset;
-        background: @color-ui;
-        text-shadow: 0px -1px 0px #000;
+        // box-shadow: 0px -1px 0px 1px rgba(0, 0, 0, 0.2),
+        //             0 1px 2px -2px rgba(255, 255, 255, 0.5) inset,
+        //             0 -17px 16px -7px rgba(0, 0, 0, 0.2) inset;
+        background: mix(@color-ui, @color-ui-light);
+        color     : rgba(255, 255, 255, 0.3);
+        // text-shadow: 0px -1px 0px #000;
 
-        &:hover {
-            background: lighten(#2F3129, 2%);
-            color: #fff;
-        }
+        // &:hover {
+        //     background: lighten(#2F3129, 2%);
+        //     color: #fff;
+        // }
 
         &.active {
             // border-top: 2px solid rgba(255, 165, 0, 0.4);
-            box-shadow: 0px -1px 0px 1px rgba(0, 0, 0, 0.5),
-                        0 2px 1px -2px rgba(255, 255, 255, 0.8) inset,
-                        0 10px 0 -8px @color-ui-accent inset;
+            // box-shadow: 0px -1px 0px 1px rgba(0, 0, 0, 0.5),
+            //             0 2px 1px -2px rgba(255, 255, 255, 0.8) inset,
+            //             0 10px 0 -8px @color-ui-accent inset;
             background: linear-gradient(
-                @color-ui-light,
-                @color-ui
+                lighten(@color-ui-light, 10%),
+                @color-ui-light
             );
             color: #fff;
+            text-shadow: 0 1px 0 @color-ui;
+            
+            .close-tab {
+                text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+            }
         }
 
         &.modified {
-            color: orange;
-        }
-
-        &.modified .close-tab:not(:hover) {
-            &::before {
-                color: orange;
-                text-shadow: 0px 0px 1px #000;
+            color: @color-ui-accent;
+            text-shadow: 0 0 1px @color-ui-dark;
+            .close-tab {
+                text-shadow: 0 0 1px @color-ui-dark;
             }
         }
+
+        // &.modified .close-tab:not(:hover) {
+        //     &::before {
+        //         color: orange;
+        //         text-shadow: 0px 0px 1px #000;
+        //     }
+        // }
     }
 }
